--- a/projects/marketplace/marketplace/item/templates/item/detail.html
+++ b/projects/marketplace/marketplace/item/templates/item/detail.html
@@ -19,7 +19,19 @@
             {{ item.description }}
         </p>
         {% endif %}
-        <a href='inline-block mt-6 px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-500'>Contact Seller</a>
+
+        {% if  request.user == item.created_by %}
+            <div class='mt-6 p-6 bg-white rounded-xl '>
+                <p class='text-center'>Your Item</p> 
+                <a href="{% url 'item:delete' item.id %}" class='inline-block mt-6 px-6 py-3 text-sm font-semibold bg-red-500 text-white rounded-xl hover:bg-red-800'>Delete</a>
+                <a href="{% url 'item:edit' item.id %}" class='inline-block mt-6 px-6 py-3 text-sm font-semibold bg-green-500 text-white rounded-xl hover:bg-green-800'>Edit</a>
+            </div>
+            
+          
+        {%else%}
+            <button class='mt-6 px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-500'>Contact Seller</button>
+        {% endif %}
+
 </div>
 
 <div class='mt-6 px-6 py-12 bg-gray-100 rounded-xl'>
