--- a/projects/marketplace/marketplace/core/templates/core/base.html
+++ b/projects/marketplace/marketplace/core/templates/core/base.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     {% comment %} tab title will show up as 'Welcome | Marketplace' {% endcomment %}
-    <title> {% block title%} {% endblock %} | Marketplace</title>
+    <title> {% block title%} {% endblock %} | Python Marketplace</title>
 </head>
 <body>
     <nav class='px-6 py-6 flex justify-between items-center border-b border-orange-200'>
-        <a href='/' class='text-xl font-semibold'>Marketplace</a>
+        <a href='/' class='text-xl font-semibold'>Python Marketplace</a>
         
         <div class='space-x-6'>
             <a href='{% url "item:new" %}' class='text-lg font-semibold hover:text-black-500'>New Item</a>
