--- a/projects/marketplace/marketplace/core/templates/core/index.html
+++ b/projects/marketplace/marketplace/core/templates/core/index.html
@@ -26,15 +26,16 @@
     </div>
 
     <div class='mt-6 px-6 py-12 bg-gray-100 rounded-xl'>
-        <h2 class='mb-12 text-2xl text-center'>Category</h2>
+        <h2 class='mb-12 text-2xl text-center'>Type</h2>
 
         <div class='grid grid-cols-3 gap-3'>
-            {% for category in categories %}
+            {% for type in types %}
             <div>
                 <a href="#">
                     <div class='p-6 bg-white rounded-b-xl'>
-                        <h2 class='text-2xl'>{{ category.name }}</h2>
-                        <p class='text-gray-500'>{{ category.items.count }} items</p>
+                        <h2 class='text-2xl'>{{ type.name }}</h2>
+                        <h3 class='text-2xl'>{{ species.name }}</h3>
+                        <p class='text-gray-500'>{{ type.items.count }} items</p>
                     </div> 
                 </a>
             </div>
